--- a/h2/Alumni.html
+++ b/h2/Alumni.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans'rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans'rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div class="kepala">
@@ -42,11 +42,11 @@
                 <p style="color: white; font-size: 18px;">dengan <i class="material-icons" style="color: rgb(255, 67, 67); font-size: 11px;">favorite</i> untuk Palu</p>
                 </center>
         </div>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript">
         </script>
-        <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.6.1.0/prototype.js" type="text/javascript">
+        <script src="https://ajax.googleapis.com/ajax/libs/prototype/1.6.1.0/prototype.js" type="text/javascript">
         </script>
-        <script src="http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.3/scriptaculous.js" type="text/javascript">
+        <script src="https://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.3/scriptaculous.js" type="text/javascript">
         </script>
         <script>
         function hxover(x) {
