--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans'rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lobster|Open+Sans'rel='stylesheet' type='text/css'>
     </head>
     <body>
         <div class="miring"></div>
