--- a/h2/Alumni.html
+++ b/h2/Alumni.html
@@ -21,7 +21,7 @@
         <div class="konten2">
             <center>
                 <div id="a1"></div>
-                <div class="bt"><a href="">Selanjutnya</a></div>
+                <div class="btn"><a href="">Selanjutnya</a></div>
             </center>
         </div>
         <div class="konten4">
